ecmascript/parser/tests/test262-error-references/fail/3a3e59edfed719b0.js.stderr
error: TS2406
 --> $DIR/tests/test262-parser/fail/3a3e59edfed719b0.js:1:1
  |
1 | ({ obj:20 }) = 42
  | ^^^^^^^^^^^^

